# cpptracery

./: .clang-format  CMakeLists.txt  CPPLINT.cfg  app.cpp
grammars/: conference.json  neverbar.json  nightvale.json  poem.json  scifi.json
tests/: CMakeLists.txt  test_modifiers.cpp  test_tracery.cpp  test_tracery.h  tests.cpp
tracery/: CMakeLists.txt  modifiers.cpp  modifiers.h  tracery.cpp  tracery.h
